# pikachu-lamp

./: Pikachu_lamp.ino  chu.h  pi.h  pika.h  sparking.h
pika_chu_sounds/: pikachu_sounds.aup3-shm
wav2progmem/: README.md  pyproject.toml
wav2progmem/wav2progmem/: __init__.py  __main__.py  convert.py  shell.py  wav_file.py
