[tool.poetry]
name = "wav2progmem"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.7"

[tool.poetry.scripts]
wav2progmem = "wav2progmem.shell:convert_files"


[tool.poetry.group.dev.dependencies]
typing-extensions = "^4.12.2"
autopep8 = "^2.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
